--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
 
         .dark {
             color: burlywood;
-        }
+  }
+
   </style>
 
 </head>
@@ -126,7 +127,9 @@
     <button>Learn Ballet</button>
     <footer>
         Coded with love by Cecilia Mutisya.
-        
+        Hosted with
+        a href="https://www.netlify.com/">netlify</a>
+      
     </footer>
     <script>
         function changeTheme() {
